data/derived/sp14/progs/unify/prog4899.ml.out
Characters 205-206:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type 'a -> 'b * 'a list -> 'b * 'a list
       but an expression was expected of type 'a -> 'b * 'a list -> 'a
       The type variable 'a occurs inside 'b * 'a list
